--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <header class="hero-section">
       <div class="content">
         <img src="img/light-logo.png" class="logo" alt="" />
-        <p class="sub-heading">best fashion collection of all time</p>
+        <!-- <p class="sub-heading">best fashion collection of all time</p> -->
       </div>
     </header>
 
